rename directories and fixed the problem of the post content overflowing

--- a/css/posts.css
+++ b/css/posts.css
@@ -44,8 +44,8 @@ section.posts-container {
 	float: right;
 	color: #585858;
 }
-
-
-
+.a-post .content {
+	word-wrap:break-word
+}
 
 
